[package]
name = "discord-tod"
version = "0.1.0"
edition = "2024"
[dependencies]
dotenvy = "0.15.7"
poise = "0.6.1"
rand = "0.9.1"
rusqlite = "0.35.0"
serenity = { version = "0.12.4", features = ["framework", "standard_framework", "gateway", "client"] }
tokio = { version = "1", features = ["full"] }
env_logger = "0.11.8"
log = "0.4"